MyBatis to JPA(autor ut)