@@ -1,19 +1,13 @@
 package com.tarosuke777.hms.controller;
 
-import static org.springframework.security.test.web.servlet.request.SecurityMockMvcRequestPostProcessors.csrf;
-import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.get;
-import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.post;
-import static org.springframework.test.web.servlet.result.MockMvcResultHandlers.print;
-import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.model;
-import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.redirectedUrl;
-import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.status;
-import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.view;
-
+import static org.springframework.security.test.web.servlet.request.SecurityMockMvcRequestPostProcessors.*;
+import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.*;
+import static org.springframework.test.web.servlet.result.MockMvcResultHandlers.*;
+import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.*;
 import java.util.List;
-import java.util.stream.Collectors;
-
 import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.Test;
+import org.modelmapper.ModelMapper;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.autoconfigure.web.servlet.AutoConfigureMockMvc;
 import org.springframework.boot.test.context.SpringBootTest;
@@ -24,11 +18,10 @@ import org.springframework.test.context.jdbc.Sql;
 import org.springframework.test.web.servlet.MockMvc;
 import org.springframework.test.web.servlet.ResultActions;
 import org.springframework.transaction.annotation.Transactional;
-
 import com.tarosuke777.hms.entity.AuthorEntity;
 import com.tarosuke777.hms.form.AuthorForm;
-import com.tarosuke777.hms.repository.AuthorMapper;
-import com.tarosuke777.hms.repository.TestAuthorMapper;
+import com.tarosuke777.hms.repository.AuthorRepository;
+import jakarta.persistence.EntityManager;
 
 @SpringBootTest
 @AutoConfigureMockMvc
@@ -38,10 +31,14 @@ import com.tarosuke777.hms.repository.TestAuthorMapper;
 @WithUserDetails("admin")
 public class AuthorControllerTest {
 
-  @Autowired private MockMvc mockMvc;
-
-  @Autowired private AuthorMapper authorMapper;
-  @Autowired private TestAuthorMapper testAuthorMapper;
+  @Autowired
+  private MockMvc mockMvc;
+  @Autowired
+  private AuthorRepository authorRepository; // Repositoryへ変更
+  @Autowired
+  private ModelMapper modelMapper; // ModelMapper追加
+  @Autowired
+  private EntityManager entityManager; // キャッシュクリア用
 
   private static final String LIST_ENDPOINT = "/author/list";
   private static final String LIST_VIEW = "author/list";
@@ -60,36 +57,100 @@ public class AuthorControllerTest {
   void getList_ShouldReturnAuthorList() throws Exception {
 
     // Given
-    List<AuthorForm> expectedAuthorList =
-        authorMapper.findMany().stream()
-            .map(entity -> new AuthorForm(entity.getAuthorId(), entity.getAuthorName()))
-            .collect(Collectors.toList());
+    List<AuthorForm> expectedAuthorList = authorRepository.findAll().stream()
+        .map(entity -> modelMapper.map(entity, AuthorForm.class)).toList();
 
     // When & Then
-    performGetListRequest()
-        .andExpect(status().isOk())
+    performGetListRequest().andExpect(status().isOk())
         .andExpect(model().attribute("authorList", expectedAuthorList))
         .andExpect(view().name(LIST_VIEW));
   }
 
-  private ResultActions performGetListRequest() throws Exception {
-    return mockMvc.perform(get(LIST_ENDPOINT)).andDo(print());
-  }
 
   @Test
   void getDetail_ShouldReturnAuthorDetail() throws Exception {
 
     // Given
-    AuthorEntity expectedAuthorEntity = testAuthorMapper.findFirstOne();
-    AuthorForm expectedAuthorForm =
-        new AuthorForm(expectedAuthorEntity.getAuthorId(), expectedAuthorEntity.getAuthorName());
+    AuthorEntity entity = authorRepository.findAll().get(0);
+    AuthorForm expectedAuthorForm = modelMapper.map(entity, AuthorForm.class);
 
     // When & Then
-    performGetDetailRequest(expectedAuthorEntity.getAuthorId())
-        .andExpect(status().isOk())
+    performGetDetailRequest(entity.getAuthorId()).andExpect(status().isOk())
         .andExpect(model().attribute("authorForm", expectedAuthorForm))
-        .andExpect(view().name(DETAIL_VIEW))
+        .andExpect(view().name(DETAIL_VIEW)).andExpect(model().hasNoErrors());
+  }
+
+
+  @Test
+  void getRegister_ShouldReturnRegisterPage() throws Exception {
+
+    // Given
+
+    // When & Then
+    performGetRegisterRequest().andExpect(status().isOk()).andExpect(view().name(REGISTER_VIEW))
         .andExpect(model().hasNoErrors());
+  }
+
+
+  @Test
+  void register_WithValidData_ShouldRedirectToList() throws Exception {
+
+    // Given
+    String authorName = "TestAuthorName";
+
+    // When & Then
+    performRegisterRequest(authorName).andExpect(status().is3xxRedirection())
+        .andExpect(redirectedUrl(LIST_URL));
+
+    entityManager.flush();
+    entityManager.clear();
+
+    List<AuthorEntity> authors = authorRepository.findAll();
+    AuthorEntity lastAuthor = authors.get(authors.size() - 1);
+    Assertions.assertEquals(authorName, lastAuthor.getAuthorName());
+  }
+
+  @Test
+  void update_WithValidData_ShouldUpdateAndRedirectToList() throws Exception {
+
+    // Given
+    AuthorEntity expectedAuthor = authorRepository.findAll().get(0);
+    expectedAuthor.setAuthorName("著者２");
+
+    // When & Then
+    performUpdateRequest(expectedAuthor).andExpect(status().is3xxRedirection())
+        .andExpect(redirectedUrl(LIST_URL));
+
+    entityManager.flush();
+    entityManager.clear();
+
+    AuthorEntity author = authorRepository.findById(expectedAuthor.getAuthorId()).orElse(null);
+    Assertions.assertEquals(author.getAuthorName(), expectedAuthor.getAuthorName());
+  }
+
+
+  @Test
+  void delete_ExistingAuthor_ShouldDeleteAndRedirectToList() throws Exception {
+
+    // Given
+    AuthorEntity targetAuthor = authorRepository.findAll().get(0);
+    Integer targetAuthorId = targetAuthor.getAuthorId();
+
+    // When & Then
+    performDeleteRequest(targetAuthor.getAuthorId()).andExpect(status().is3xxRedirection())
+        .andExpect(redirectedUrl(LIST_URL));
+
+    entityManager.flush();
+    entityManager.clear();
+
+    AuthorEntity author = authorRepository.findById(targetAuthorId).orElse(null);
+    Assertions.assertNull(author);
+  }
+
+  // --- Helper Methods ---
+
+  private ResultActions performGetListRequest() throws Exception {
+    return mockMvc.perform(get(LIST_ENDPOINT)).andDo(print());
   }
 
   private ResultActions performGetDetailRequest(int authorId) throws Exception {
@@ -99,98 +160,27 @@ public class AuthorControllerTest {
         .andDo(print());
   }
 
-  @Test
-  void getRegister_ShouldReturnRegisterPage() throws Exception {
-
-    // Given
-
-    // When & Then
-    performGetRegisterRequest()
-        .andExpect(status().isOk())
-        .andExpect(view().name(REGISTER_VIEW))
-        .andExpect(model().hasNoErrors());
-  }
-
   private ResultActions performGetRegisterRequest() throws Exception {
     return mockMvc
         .perform(get(REGISTER_ENDPOINT).accept(MediaType.TEXT_HTML).characterEncoding("UTF-8"))
         .andDo(print());
   }
 
-  @Test
-  void register_WithValidData_ShouldRedirectToList() throws Exception {
-
-    // Given
-    String authorName = "TestAuthorName";
-
-    // When & Then
-    performRegisterRequest(authorName)
-        .andExpect(status().is3xxRedirection())
-        .andExpect(redirectedUrl(LIST_URL));
-
-    AuthorEntity authorEntity = testAuthorMapper.findLastOne();
-    Assertions.assertEquals(authorName, authorEntity.getAuthorName());
-  }
-
   private ResultActions performRegisterRequest(String authorName) throws Exception {
     return mockMvc
-        .perform(
-            post(REGISTER_ENDPOINT)
-                .with(csrf())
-                .contentType(MediaType.APPLICATION_FORM_URLENCODED)
-                .param("authorName", authorName))
+        .perform(post(REGISTER_ENDPOINT).with(csrf())
+            .contentType(MediaType.APPLICATION_FORM_URLENCODED).param("authorName", authorName))
         .andDo(print());
-  }
-
-  @Test
-  void update_WithValidData_ShouldUpdateAndRedirectToList() throws Exception {
-
-    // Given
-    AuthorEntity expectedAuthor = testAuthorMapper.findFirstOne();
-    expectedAuthor.setAuthorName("著者２");
-
-    // When & Then
-    performUpdateRequest(expectedAuthor)
-        .andExpect(status().is3xxRedirection())
-        .andExpect(redirectedUrl(LIST_URL));
-
-    AuthorEntity author = testAuthorMapper.findFirstOne();
-    Assertions.assertEquals(author, expectedAuthor);
   }
 
   private ResultActions performUpdateRequest(AuthorEntity author) throws Exception {
-    return mockMvc
-        .perform(
-            post(UPDATE_ENDPOINT)
-                .with(csrf())
-                .param("update", "")
-                .param("authorId", author.getAuthorId().toString())
-                .param("authorName", author.getAuthorName()))
-        .andDo(print());
-  }
-
-  @Test
-  void delete_ExistingAuthor_ShouldDeleteAndRedirectToList() throws Exception {
-
-    // Given
-    AuthorEntity targetAuthor = testAuthorMapper.findFirstOne();
-
-    // When & Then
-    performDeleteRequest(targetAuthor.getAuthorId())
-        .andExpect(status().is3xxRedirection())
-        .andExpect(redirectedUrl(LIST_URL));
-
-    AuthorEntity author = authorMapper.findOne(1);
-    Assertions.assertNull(author);
+    return mockMvc.perform(post(UPDATE_ENDPOINT).with(csrf()).param("update", "")
+        .param("authorId", author.getAuthorId().toString())
+        .param("authorName", author.getAuthorName())).andDo(print());
   }
 
   private ResultActions performDeleteRequest(int authorId) throws Exception {
-    return mockMvc
-        .perform(
-            post(DELETE_ENDPOINT)
-                .with(csrf())
-                .param("delete", "")
-                .param("authorId", String.valueOf(authorId)))
-        .andDo(print());
+    return mockMvc.perform(post(DELETE_ENDPOINT).with(csrf()).param("delete", "").param("authorId",
+        String.valueOf(authorId))).andDo(print());
   }
 }
